Add reference baguetteBox.min.js

--- a/cards-gallery.html
+++ b/cards-gallery.html
@@ -85,7 +85,7 @@
 	        </div>
 	    </div>
     </section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+    <script src="js/baguetteBox.min.js"></script>
     <script>
         baguetteBox.run('.cards-gallery', { animation: 'slideIn'});
     </script>
